@@ -76,10 +76,8 @@ class ContentModelForm extends JModelForm
 	{
 		$options += array('control' => 'jform');
 
-		try {
-			$form = parent::getForm($name, $xml, $options);
-		} catch (Exception $e) {
-			$this->setError($e->getMessage());
+		$form = parent::getForm($name, $xml, $options);
+		if (empty($form)) {
 			return false;
 		}
 
