@@ -51,10 +51,8 @@ class UsersModelRegistration extends JModelForm
 	public function getForm()
 	{
 		// Get the form.
-		try {
-			$form = parent::getForm('com_users.registration', 'registration', array('control' => 'jform'));
-		} catch (Exception $e) {
-			$this->setError($e->getMessage());
+		$form = parent::getForm('com_users.registration', 'registration', array('control' => 'jform'));
+		if (empty($form)) {
 			return false;
 		}
 
