@@ -48,10 +48,8 @@ class UsersModelRemind extends JModelForm
 	function &getForm()
 	{
 		// Get the form.
-		try {
-			$form = parent::getForm('com_users.remind', 'remind', array('control' => 'jform'));
-		} catch (Exception $e) {
-			$this->setError($e->getMessage());
+		$form = parent::getForm('com_users.remind', 'remind', array('control' => 'jform'));
+		if (empty($form)) {
 			return false;
 		}
 
