@@ -47,10 +47,8 @@ class UsersModelReset extends JModelForm
 	function &getForm()
 	{
 		// Get the form.
-		try {
-			$form = parent::getForm('com_users.reset_request', 'reset_request', array('control' => 'jform'));
-		} catch (Exception $e) {
-			$this->setError($e->getMessage());
+		$form = parent::getForm('com_users.reset_request', 'reset_request', array('control' => 'jform'));
+		if (empty($form)) {
 			return false;
 		}
 
